--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Ashik Sarkar <ashiksarkar.s18@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@vitest/coverage-v8": "^2.0.5",
     "vitest": "^2.0.5"
   }
 }
